macro/src/snapshots/rust_sitter_macro__tests__enum_with_named_field.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[rust_sitter::grammar(\"test\")] mod grammar\n    {\n        #[rust_sitter::language] pub enum Expr\n        {\n            Number(#[rust_sitter::leaf(pattern(r\"\\d+\"))] u32), Neg\n            { #[rust_sitter::leaf(\"!\")] _bang: (), value: Box<Expr>, }\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub enum Expr {
        Number(u32),
        Neg { _bang: (), value: Box<Expr> },
    }
    impl ::rust_sitter::Extract<Expr> for Expr {
        type LeafFn<'a> = ();
        #[allow(non_snake_case)]
        fn extract<'a>(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _last_pt: ::rust_sitter::tree_sitter::Point,
            _leaf_fn: Option<Self::LeafFn<'a>>,
        ) -> Self {
            let node = node.expect("No node found");
            let mut cursor = node.walk();
            assert!(
                cursor.goto_first_child(),
                "Could not find a child corresponding to any enum branch"
            );
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expr_Number" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx, last_pt| {
                                Expr::Number({
                                    ::rust_sitter::__private::extract_field::<u32, _>(
                                        cursor, source, last_idx, last_pt, "0", None,
                                    )
                                })
                            },
                        )
                    }
                    "Expr_Neg" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx, last_pt| Expr::Neg {
                                _bang: {
                                    ::rust_sitter::__private::extract_field::<(), _>(
                                        cursor, source, last_idx, last_pt, "_bang", None,
                                    )
                                },
                                value: {
                                    ::rust_sitter::__private::extract_field::<Box<Expr>, _>(
                                        cursor, source, last_idx, last_pt, "value", None,
                                    )
                                },
                            },
                        )
                    }
                    _ => {
                        if !cursor.goto_next_sibling() {
                            panic!("Could not find a child corresponding to any enum branch")
                        }
                    }
                }
            }
        }
    }
    unsafe extern "C" {
        fn tree_sitter_test() -> ::rust_sitter::tree_sitter::Language;
    }
    pub fn language() -> ::rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Expr`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Expr, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Expr>(input, language)
    }
}
