macro/src/snapshots/rust_sitter_macro__tests__struct_optional.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    mod grammar\n    {\n        #[derive(rust_sitter::Rule)] #[language] pub struct Language\n        { #[leaf(re(r\"\\d+\"))] v: Option<i32>, t: Option<Number>, }\n        #[derive(rust_sitter::Rule)] pub struct Number\n        { #[leaf(re(r\"\\d+\"))] v: i32 }\n    }\n}).to_token_stream().to_string())"
---
mod grammar {
    impl ::rust_sitter::rule::Language for Language {
        fn produce_grammar() -> String {
            String::new()
        }
        fn language() -> ::rust_sitter::tree_sitter::Language {
            unsafe extern "C" {
                fn tree_sitter_Language() -> ::rust_sitter::tree_sitter::Language;
            }
            unsafe { tree_sitter_Language() }
        }
        #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
        #[doc = "[`Language`]"]
        #[doc = r" instance containing the parsed structured data."]
        fn parse(input: &str) -> ::rust_sitter::ParseResult<Self> {
            ::rust_sitter::__private::parse(input, Self::language)
        }
    }
    impl ::rust_sitter::Extract for Language {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::rust_sitter::extract::ExtractContext,
            node: Option<::rust_sitter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::rust_sitter::extract::ExtractError<'tree>> {
            let node = node.ok_or_else(|| ::rust_sitter::error::ExtractError::missing_node(ctx))?;
            ::rust_sitter::__private::extract_struct_or_variant(
                stringify!(Language),
                node,
                move |state| {
                    Ok(Language {
                        v: ::rust_sitter::__private::extract_field::<Option<i32>, _>(
                            ::rust_sitter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::rust_sitter::extract::ExtractFieldContext::new(0u32, true, |state| {
                                match state {
                                    0u32 => ::rust_sitter::extract::ExtractFieldState::Complete,
                                    _ => ::rust_sitter::extract::ExtractFieldState::Overflow,
                                }
                            }),
                            source,
                            "v",
                        )?,
                        t: ::rust_sitter::__private::extract_field::<Option<Number>, _>(
                            ::rust_sitter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::rust_sitter::extract::ExtractFieldContext::new(1u32, true, |state| {
                                match state {
                                    0u32 => ::rust_sitter::extract::ExtractFieldState::Str(
                                        "Number", true, false,
                                    ),
                                    1u32 => ::rust_sitter::extract::ExtractFieldState::Complete,
                                    _ => ::rust_sitter::extract::ExtractFieldState::Overflow,
                                }
                            }),
                            source,
                            "t",
                        )?,
                    })
                },
            )
        }
    }
    impl ::rust_sitter::rule::Rule for Language {
        const RULE_NAME: &'static str = "Language";
        fn produce_ast() -> String {
            String::new()
        }
    }
    impl ::rust_sitter::Extract for Number {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::rust_sitter::extract::ExtractContext,
            node: Option<::rust_sitter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::rust_sitter::extract::ExtractError<'tree>> {
            let node = node.ok_or_else(|| ::rust_sitter::error::ExtractError::missing_node(ctx))?;
            ::rust_sitter::__private::extract_struct_or_variant(
                stringify!(Number),
                node,
                move |state| {
                    Ok(Number {
                        v: ::rust_sitter::__private::extract_field::<i32, _>(
                            ::rust_sitter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::rust_sitter::extract::ExtractFieldContext::new(
                                0u32,
                                false,
                                |state| match state {
                                    0u32 => ::rust_sitter::extract::ExtractFieldState::Complete,
                                    _ => ::rust_sitter::extract::ExtractFieldState::Overflow,
                                },
                            ),
                            source,
                            "v",
                        )?,
                    })
                },
            )
        }
    }
    impl ::rust_sitter::rule::Rule for Number {
        const RULE_NAME: &'static str = "Number";
        fn produce_ast() -> String {
            String::new()
        }
    }
}
